# SQL-GuardRails

./: .gitignore  README.md  demo.ipynb  design.md  pyproject.toml  requirements.txt  superstore.db
example/: SampleSuperstore.csv  agent.py  sqlalchemy_db.ipynb  superstore.db
example/reference_data/: category_values.json  city_values.json  customer_id_values.json  customer_name_values.json  order_date_values.json  order_id_values.json  product_id_values.json  product_name_values.json  region_values.json  segment_values.json  ship_date_values.json  ship_mode_values.json  state_values.json  sub_category_values.json
examples/: run_analysis.py
examples/sample_preferences/: countries.csv  products.csv
sql_guardrail/: __init__.py
sql_guardrail/core/: distance_metrics.py  sql_rail.py
sql_guardrail/utils/: data_loader_utils.py  sql_parser_utils.py
